# rust-learning

./: .gitignore  README.md
appendix_a_glossary/: README.md
appendix_b_resources/: README.md
chapter_01_introduction_setup/: README.md
chapter_01_introduction_setup/examples/hello_world/: Cargo.toml
chapter_02_basic_syntax_data_types/: README.md
chapter_02_basic_syntax_data_types/examples/basic_syntax/: Cargo.toml
chapter_02_basic_syntax_data_types/examples/basic_syntax/src/: main.rs
chapter_03_control_flow/: README.md
chapter_03_control_flow/examples/control_flow_example/: Cargo.toml
chapter_03_control_flow/examples/control_flow_example/src/: main.rs
chapter_04_ownership_borrowing/: README.md
chapter_04_ownership_borrowing/examples/ownership_example/src/: main.rs
chapter_05_structs_enums/: README.md
chapter_05_structs_enums/examples/structs_enums_example/: Cargo.toml
chapter_05_structs_enums/examples/structs_enums_example/src/: main.rs
chapter_06_collections/: README.md
chapter_06_collections/examples/collections_example/src/: main.rs
chapter_07_error_handling/: README.md
chapter_07_error_handling/examples/error_handling_example/: Cargo.toml
chapter_07_error_handling/examples/error_handling_example/src/: main.rs
chapter_08_generics_traits_lifetimes/: README.md
chapter_08_generics_traits_lifetimes/examples/adv_types_example/: Cargo.toml
chapter_09_smart_pointers/: README.md
chapter_09_smart_pointers/examples/smart_pointers_example/: Cargo.toml
chapter_09_smart_pointers/examples/smart_pointers_example/src/: main.rs
chapter_10_concurrency/: README.md
chapter_10_concurrency/examples/concurrency_example/: Cargo.toml
chapter_11_testing/: README.md
chapter_11_testing/examples/adder/: Cargo.toml
chapter_12_cargo_crates_io/: README.md
chapter_12_cargo_crates_io/examples/my_calculator/: Cargo.toml  build.rs
chapter_13_advanced_topics/: README.md
chapter_13_advanced_topics/examples/advanced_examples/: Cargo.toml  build.rs
chapter_14_idioms_best_practices/: README.md
chapter_14_idioms_best_practices/examples/idioms_example/src/: main.rs
chapter_15_cli_project/: README.md
chapter_15_cli_project/examples/rwc/: Cargo.toml
chapter_15_cli_project/examples/rwc/src/: main.rs
chapter_16_web_project/: README.md
chapter_16_web_project/examples/simple_api/: Cargo.toml
chapter_16_web_project/examples/simple_api/src/: main.rs
rust_learning_book/: README.md
rust_learning_book/chapter_01_introduction_setup/examples/hello_world/src/: main.rs
rust_learning_book/chapter_02_basic_syntax_data_types/: README.md
rust_learning_book/chapter_03_control_flow/: README.md
rust_learning_book/chapter_04_ownership_borrowing/: README.md
rust_learning_book/chapter_04_ownership_borrowing/examples/ownership_example/: Cargo.toml
rust_learning_book/chapter_05_structs_enums/: README.md
rust_learning_book/chapter_06_collections/: README.md
rust_learning_book/chapter_06_collections/examples/collections_example/: Cargo.toml
rust_learning_book/chapter_07_error_handling/: README.md
rust_learning_book/chapter_08_generics_traits_lifetimes/: README.md
rust_learning_book/chapter_08_generics_traits_lifetimes/examples/adv_types_example/src/: main.rs
rust_learning_book/chapter_09_smart_pointers/: README.md
rust_learning_book/chapter_10_concurrency/examples/concurrency_example/src/: main.rs
rust_learning_book/chapter_11_testing/: README.md
rust_learning_book/chapter_11_testing/examples/adder/src/: lib.rs
rust_learning_book/chapter_11_testing/examples/adder/tests/: integration_tests.rs
rust_learning_book/chapter_12_cargo_crates_io/: README.md
rust_learning_book/chapter_12_cargo_crates_io/examples/my_calculator/: README.md
rust_learning_book/chapter_12_cargo_crates_io/examples/my_calculator/src/: lib.rs
rust_learning_book/chapter_13_advanced_topics/examples/advanced_examples/src/: main.rs  my_c_lib.c
rust_learning_book/chapter_14_idioms_best_practices/: README.md
rust_learning_book/chapter_14_idioms_best_practices/examples/idioms_example/: Cargo.toml
rust_learning_book/chapter_15_cli_project/: README.md
rust_learning_book/chapter_15_cli_project/examples/rwc/: sample.txt
rust_learning_book/chapter_15_cli_project/examples/rwc/tests/: cli_tests.rs
rust_learning_book/chapter_16_web_project/examples/simple_api/tests/: api_tests.rs
